--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
 			<button class="home__contact">CONTACT ME</button>
 		</section>
 		<!-- About -->
-		<!-- modify BEM naming and add images, icons -->
-		<section id="about">
+		<section id="about" class="section">
 			<h1>About me</h1>
 			<p>
 				자기소개 Lorem Ipsum is simply dummy text of the printing and
@@ -69,17 +68,17 @@
 			<div class="about__majors">
 				<div class="major">
 					<div class="major__icon"><i class="fab fa-html5"></i></div>
-					<div class="major__title">HTML</div>
+					<h2 class="major__title">HTML</h2>
 					<div class="major__description">html</div>
 				</div>
 				<div class="major">
 					<div class="major__icon"><i class="fab fa-css3-alt"></i></div>
-					<div class="major__title">CSS</div>
+					<h2 class="major__title">CSS</h2>
 					<div class="major__description">css</div>
 				</div>
 				<div class="major">
 					<div class="major__icon"><i class="fab fa-js"></i></div>
-					<div class="major__title">JavaScript</div>
+					<h2 class="major__title">JavaScript</h2>
 					<div class="major__description">javascript</div>
 				</div>
 			</div>
@@ -107,8 +106,10 @@
 						alt="ncia logo"
 						class="job__logo"
 					/>
-					<p class="job__name">blablalbla</p>
-					<p class="job__period">2017-2018</p>
+					<div class="job__description">
+						<p class="job__name">blablalblablablalblablablalblablablalbla</p>
+						<p class="job__period">2017-2018</p>
+					</div>
 				</div>
 				<div class="job">
 					<img
@@ -116,8 +117,10 @@
 						alt="ncia logo"
 						class="job__logo"
 					/>
-					<p class="job__name">blablalbla</p>
-					<p class="job__period">2017-2018</p>
+					<div class="job__description">
+						<p class="job__name">blablalblablablalblablablalblablablalbla</p>
+						<p class="job__period">2017-2018</p>
+					</div>
 				</div>
 			</div>
 			<!-- <div class="career">
@@ -208,7 +211,7 @@
 				</div>
 			</div>
 		</section> -->
-		<section id="skills">
+		<section id="skills" class="section">
 			<h1>Skills</h1>
 			<h2>Skills & Attributes</h2>
 			<p>
@@ -302,7 +305,7 @@
 			</div>
 			<div class="myWork__displayItems"></div>
 		</section> -->
-		<section id="work">
+		<section id="work" class="section">
 			<h1>My work</h1>
 			<h3>Projects</h3>
 			<div class="work__categories">
@@ -472,7 +475,7 @@
 				</div>
 			</div>
 		</section> -->
-		<section id="testimonial">
+		<section id="testimonial" class="section">
 			<h1>Testimonials</h1>
 			<h3>See what they say about me</h3>
 			<div class="testimonials">
@@ -525,7 +528,7 @@
 				2020 Dream Coding Hwan - All right reserved
 			</p>
 		</footer> -->
-		<section id="contact">
+		<section id="contact" class="section">
 			<h1 class="contact__title">Let's talk</h1>
 			<h2 class="contact__email">dhchun1203@gmil.com</h2>
 			<div class="contact__links">
