--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<button class="home__contact">CONTACT ME</button>
 		</section>
 		<!-- About -->
-		<section id="about" class="section">
+		<section id="about" class="section section__container">
 			<h1>About me</h1>
 			<p>
 				자기소개 Lorem Ipsum is simply dummy text of the printing and
@@ -212,87 +212,88 @@
 			</div>
 		</section> -->
 		<section id="skills" class="section">
-			<h1>Skills</h1>
-			<h2>Skills & Attributes</h2>
-			<p>
-				Experience with all phases of the software life-cycle. Passion for
-				learning new technologies. Capable of working within a team enviroment
-				and independently. Ability to plan and time schedule, work under strict
-				time pressure and adapt quickly when needed.
-			</p>
-			<div class="skillset">
-				<div class="skillset__left">
-					<h3 class="skillset__title">Skills</h3>
-					<div class="skill">
-						<div class="skill_description">
-							<span>HTML</span>
-							<span>99%</span>
+			<div class="section__container">
+				<h1>Skills</h1>
+				<h2>Skills & Attributes</h2>
+				<p>
+					Experience with all phases of the software life-cycle. Passion for
+					learning new technologies. Capable of working within a team enviroment
+					and independently. Ability to plan and time schedule, work under
+					strict time pressure and adapt quickly when needed.
+				</p>
+				<div class="skillset">
+					<div class="skillset__left">
+						<h3 class="skillset__title">Skills</h3>
+						<div class="skill">
+							<div class="skill__description">
+								<span>HTML</span>
+								<span>99%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 99%"></div>
+							</div>
 						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>CSS</span>
+								<span>80%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 80%"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>JavaScript</span>
+								<span>90%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 90%"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>TypeScript</span>
+								<span>80%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 80%"></div>
+							</div>
+						</div>
+						<div class="skill">
+							<div class="skill__description">
+								<span>React</span>
+								<span>80%</span>
+							</div>
+							<div class="skill__bar">
+								<div class="skill__value" style="width: 80%"></div>
+							</div>
 						</div>
 					</div>
-					<div class="skill">
-						<div class="skill_description">
-							<span>CSS</span>
-							<span>80%</span>
+					<div class="skillset__right">
+						<div class="tools">
+							<h3 class="skillset__title">Tools</h3>
+							<ul class="tools__list">
+								<li><span>Visual Studio Code</span></li>
+								<li><span>Eclipse</span></li>
+								<li><span>Team Foundation Server</span></li>
+								<li><span>etc..</span></li>
+								<li><span>etc..</span></li>
+							</ul>
 						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-					</div>
-					<div class="skill">
-						<div class="skill_description">
-							<span>JavaScript</span>
-							<span>90%</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-					</div>
-					<div class="skill">
-						<div class="skill_description">
-							<span>TypeScript</span>
-							<span>80%</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
+						<div class="etc">
+							<h3 class="skillset__title">Etc</h3>
+							<ul class="etc__list">
+								<li><span>Git</span></li>
+								<li><span>Slack</span></li>
+								<li><span>etc..</span></li>
+							</ul>
 						</div>
 					</div>
-					<div class="skill">
-						<div class="skill_description">
-							<span>React</span>
-							<span>80%</span>
-						</div>
-						<div class="skill__bar">
-							<div class="skill__value"></div>
-						</div>
-					</div>
-				</div>
-				<div class="skillset__right">
-					<h3 class="skillset__title">Tools</h3>
-					<ul class="tools__list">
-						<li><span>Visual Studio Code</span></li>
-						<li><span>Eclipse</span></li>
-						<li><span>Team Foundation Server</span></li>
-						<li><span>etc..</span></li>
-						<li><span>etc..</span></li>
-					</ul>
-					<h3 class="skillset__title">Etc</h3>
-					<ul class="etc__list">
-						<li><span>Git</span></li>
-					</ul>
-					<ul class="etc__list">
-						<li><span>Slack</span></li>
-					</ul>
-					<ul class="etc__list">
-						<li><span>etc..</span></li>
-					</ul>
 				</div>
 			</div>
 		</section>
 		<!-- My work -->
-		<!-- modify BEM naming and add projects images and add work__projects div-->
 		<!-- <section id="myWork">
 
 			<h2 class="myWork__title">My work</h2>
