--- a/index.html
+++ b/index.html
@@ -412,5 +412,10 @@
 				2020 Dream Coding Hwan - All rights reserved
 			</p>
 		</section>
+		<!-- Arrow up -->
+
+		<button class="arrow-up">
+			<span><i class="fas fa-arrow-circle-up"></i></span>
+		</button>
 	</body>
 </html>
