--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<a href="#">Hwan</a>
 			</div>
 			<div class="navbar__menu">
-				<ul>
+				<ul class="navbar__menu">
 					<li class="navbar__menu__item active" data-link="#home">Home</li>
 					<li class="navbar__menu__item" data-link="#about">About</li>
 					<li class="navbar__menu__item" data-link="#skills">Skills</li>
@@ -98,7 +98,7 @@
 						class="job__logo"
 					/>
 					<div class="job__description">
-						<p class="job__name">blablalblablablalblablablalblablablalbla</p>
+						<p class="job__name">blablalblablabla</p>
 						<p class="job__period">2017-2018</p>
 					</div>
 				</div>
@@ -109,7 +109,7 @@
 						class="job__logo"
 					/>
 					<div class="job__description">
-						<p class="job__name">blablalblablablalblablablalblablablalbla</p>
+						<p class="job__name">blablalblablabla</p>
 						<p class="job__period">2017-2018</p>
 					</div>
 				</div>
