--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 				<h1 class="home__title">Hello, <br />Let me introduce myself!</h1>
 
 				<h2 class="home__description">
-					A frontend Developer currently residing in Yongin, South Korea.
+					I dream of becoming a front-end developer, and I'm always ready to
+					develop.
 				</h2>
 				<button class="home__contact" data-link="#contact">CONTACT ME</button>
 			</div>
