--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="home__container">
         <img class="home__avatar" src="imgs/profile.jpg" alt="profile" />
 
-        <h1 class="home__title">안녕하세요, <br />전대환 입니다.</h1>
+        <h1 class="home__title">안녕하세요, 전대환 입니다.</h1>
 
         <h2 class="home__description">
           지난 코드를 반성하고 더 좋은 다음 코드를 만들기 위해 노력하는
@@ -65,29 +65,84 @@
       <h1>About me</h1>
       <p>
         차세대 융합 콘텐츠 산업협회에서 주관하는 빅데이터 및 인공지능을 활용한
-        데이터사이언티스트 양성과정 국비지원 교육을 이수하며 프로그래밍에
+        데이터사이언티스트 양성과정 국비 지원 교육을 이수하며 프로그래밍에
         입문하였으며, 이후 프론트엔트로 진로를 설정하여 html, css, JavaScript,
-        React, TypeScript, node.js를 독학으로 학습했습니다. 코드를 공부하며
-        리팩토링이라는 개념을 알게되고 보다 이해하기 좋은 코드, 수정하기 용이한
-        좋은 코드를 만드는 것을 동경하고 지향하도록 노력하고 있습니다. 항상
-        부족함에 좌절하지 않고 인정하며 오늘의 나를 돌아보고 더 나은 내일의 나를
-        만들어가기 위해 노력하는 개발자가 되겠습니다.
+        React, TypeScript, node.js를 독학으로 학습했습니다.
+      </p>
+      <p>
+        코드를 공부하며 리팩토링이라는 개념을 알게 되고 보다 이해하기 좋은 코드,
+        수정하기 용이한 좋은 코드를 만드는 것을 동경하고 지향하도록 노력하고
+        있습니다. 항상 부족함에 좌절하지 않고 인정하며 오늘의 나를 돌아보고 더
+        나은 내일의 나를 만들어가기 위해 노력하는 개발자가 되고 싶습니다.
       </p>
       <div class="about__majors">
         <div class="major">
           <div class="major__icon"><i class="fab fa-html5"></i></div>
           <h2 class="major__title">HTML</h2>
-          <div class="major__description">html</div>
+          <div class="major__description">
+            검색 최적화를 고려하는 태그 사용 지향
+          </div>
         </div>
         <div class="major">
           <div class="major__icon"><i class="fab fa-css3-alt"></i></div>
           <h2 class="major__title">CSS</h2>
-          <div class="major__description">css</div>
+          <div class="major__description">
+            grid, flex, sass, scss, styledComponent
+          </div>
         </div>
         <div class="major">
           <div class="major__icon"><i class="fab fa-js"></i></div>
           <h2 class="major__title">JavaScript</h2>
           <div class="major__description">javascript</div>
+        </div>
+        <div class="major">
+          <div class="major__icon"><i class="fab fa-react"></i></div>
+          <h2 class="major__title">React</h2>
+          <div class="major__description">hooks, Redux, Recoil, Router</div>
+        </div>
+        <div class="major">
+          <div class="major__icon">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              x="0px"
+              y="0px"
+              width="75"
+              height="75"
+              viewBox="0 0 172 172"
+              style="fill: #000000"
+            >
+              <g
+                fill="none"
+                fill-rule="nonzero"
+                stroke="none"
+                stroke-width="1"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                stroke-miterlimit="10"
+                stroke-dasharray=""
+                stroke-dashoffset="0"
+                font-family="none"
+                font-weight="none"
+                font-size="none"
+                text-anchor="none"
+                style="mix-blend-mode: normal"
+              >
+                <path d="M0,172v-172h172v172z" fill="none"></path>
+                <g fill="#73aace">
+                  <path
+                    d="M154.8,13.76h-137.6c-1.90232,0 -3.44,1.54112 -3.44,3.44v137.6c0,1.89888 1.53768,3.44 3.44,3.44h137.6c1.90232,0 3.44,-1.54112 3.44,-3.44v-137.6c0,-1.89888 -1.53768,-3.44 -3.44,-3.44zM99.76,90.9708h-17.2v53.5092h-13.76v-53.5092h-17.2v-11.8508h48.16zM103.61624,141.42528v-14.30352c0,0 7.81224,5.88928 17.18624,5.88928c9.374,0 9.0128,-6.13008 9.0128,-6.96944c0,-8.89584 -26.56024,-8.89584 -26.56024,-28.6036c0,-26.80104 38.7,-16.22648 38.7,-16.22648l-0.4816,12.74176c0,0 -6.49128,-4.32752 -13.82192,-4.32752c-7.33064,0 -9.976,3.48472 -9.976,7.21024c0,9.6148 26.80104,8.65504 26.80104,28.00504c0.00344,29.80416 -40.86032,16.58424 -40.86032,16.58424z"
+                  ></path>
+                </g>
+              </g>
+            </svg>
+          </div>
+          <h2 class="major__title">TypeScript</h2>
+          <div class="major__description">TypeScript</div>
+        </div>
+        <div class="major">
+          <div class="major__icon"><i class="fab fa-node"></i></div>
+          <h2 class="major__title">node.js</h2>
+          <div class="major__description">Koa</div>
         </div>
       </div>
       <div class="about__jobs">
@@ -98,18 +153,12 @@
             class="job__logo"
           />
           <div class="job__description">
-            <p class="job__name">blablalblablabla</p>
-            <p class="job__period">2017-2018</p>
-          </div>
-        </div>
-        <div class="job">
-          <img
-            src="imgs/jobs/nciaedu_logo.png"
-            alt="ncia logo"
-            class="job__logo"
-          />
-          <div class="job__description">
-            <p class="job__name">blablalblablabla</p>
+            <p class="job__name">
+              빅데이터 인공지능을 활용한 데이터사이언티스트 양성과정
+            </p>
+            <p class="job__detail">
+              Java, Python, R, Oracle DB, JavaScript, 딥러닝, Android
+            </p>
             <p class="job__period">2017-2018</p>
           </div>
         </div>
@@ -121,10 +170,10 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          Experience with all phases of the software life-cycle. Passion for
-          learning new technologies. Capable of working within a team enviroment
-          and independently. Ability to plan and time schedule, work under
-          strict time pressure and adapt quickly when needed.
+          새로운 기술을 배우는 것에 있어 흥미와 열정이 넘친다고 자부하며, 팀
+          환경에서 독립적으로 작업할 수 있습니다. 계획 및 시간 일정을 수립하고,
+          엄격한 시간 압박 속에서 작업할 수 있고, 새로운 환경에 신속하게 적응할
+          수 있습니다.
         </p>
         <div class="skillset">
           <div class="skillset__left">
@@ -216,19 +265,41 @@
         <h2>Projects</h2>
         <div class="work__categories">
           <button class="category__btn selected" data-filter="*">
-            All <span class="category__count">8</span>
+            All <span class="category__count">11</span>
           </button>
           <button class="category__btn" data-filter="front-end">
-            Front-end <span class="category__count">3</span>
+            Front-end <span class="category__count">10</span>
           </button>
           <button class="category__btn" data-filter="back-end">
-            Back-end <span class="category__count">3</span>
+            Back-end <span class="category__count">1</span>
           </button>
           <button class="category__btn" data-filter="mobile">
-            Mobile <span class="category__count">2</span>
+            Mobile <span class="category__count">0</span>
           </button>
         </div>
         <div class="work__projects">
+          <a
+            href="https://github.com/dhchun1203/Portfolio"
+            class="project"
+            data-type="front-end"
+            target="blank"
+          >
+            <img
+              src="imgs/projects/Portfolio_thumbnail.png"
+              alt="portfolio project thumbnail"
+              class="project__img"
+            />
+            <div class="project__description">
+              <!--마우스를 올렸을 때 표시될 내용-->
+              <h3>Portfolio</h3>
+              <span
+                >HTML, CSS, JavaScript를 사용하여 반응형 웹에 대응하는 css media
+                query, 각 메뉴 버튼들의 동작함수를 window.scroll 함수와
+                getBoundingClient 함수를 활용하여 javascript로
+                구현했습니다.</span
+              >
+            </div>
+          </a>
           <a
             href="https://github.com/dhchun1203/DreamCoding_youtube-project"
             class="project"
@@ -409,12 +480,10 @@
               </h3>
               <span
                 >3sixteen 의류 쇼핑몰 사이트를 클론 코딩하여 UI 구성, API 설계,
-                DB 구축 등 프론트와 백으로 업무를 분담하여 작업을 진행했으며 제
-                업무는 프론트업무와 백엔드에서는 Node JS를 기반으로 API
-                설계업무를 담당했습니다. 프론트단 기술 스택은 CRA(Create React
-                App)와 함께 TypeScript를 적용하였으며 상태관리는 Recoil 상태관리
-                라이브러리를 활용하여 관리했습니다.</span
-              >
+                DB 구축 업무를 분담하여 작업을 진행했으며 제 업무는 프로젝트
+                관리 및 프론트 UI 및 상태관리 작업과 백엔드는 Node JS를 기반으로
+                API 설계업무를 담당했습니다.
+              </span>
             </div>
           </a>
           <a
@@ -487,7 +556,7 @@
     </section> -->
     <!-- Contact -->
     <section id="contact" class="section">
-      <h1 class="contact__title">Let's talk</h1>
+      <h1 class="contact__title">Contact Me</h1>
       <h2 class="contact__email">dhchun1203@gmail.com</h2>
       <div class="contact__links">
         <a href="https://github.com/dhchun1203" target="blank">
@@ -499,11 +568,11 @@
         >
           <i class="fab fa-facebook"></i>
         </a>
-        <a href="https://metahwan.notion.site" target="blank"> 노션 </a>
+        <a href="https://metahwan.notion.site" target="blank" id="notion">
+          Notion
+        </a>
       </div>
-      <p class="contact__rights">
-        2020 Dream Coding Hwan - All rights reserved
-      </p>
+      <p class="contact__rights">2020 Hwan - All rights reserved</p>
     </section>
     <!-- Arrow up -->
     <button class="arrow-up">
