--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="home__container">
         <img class="home__avatar" src="imgs/profile.jpg" alt="profile" />
 
-        <h1 class="home__title">안녕하세요, 전대환 입니다.</h1>
+        <h1 class="home__title">안녕하세요, 꿈꾸는 개발자 전대환 입니다.</h1>
 
         <h2 class="home__description">
           지난 코드를 반성하고 더 좋은 다음 코드를 만들기 위해 노력하는
