--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <h1 class="home__title">안녕하세요, 꿈꾸는 개발자 전대환 입니다.</h1>
 
         <h2 class="home__description">
-          지난 코드를 반성하고 더 좋은 다음 코드를 만들기 위해 노력하는
-          프론트엔드 개발자가 되고 싶습니다.
+          개발자의 실력을 비추는 거울이 아닌 사용자와 소통할 수 있는 유리창 같은
+          서비스를 코딩하는 개발자가 되고 싶습니다.
         </h2>
         <button class="home__contact" data-link="#contact">CONTACT ME</button>
       </div>
