--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <div class="home__container">
         <img class="home__avatar" src="imgs/profile.jpg" alt="profile" />
 
-        <h1 class="home__title">안녕하세요, 꿈꾸는 개발자 전대환 입니다.</h1>
+        <h1 class="home__title">
+          안녕하세요, 꿈꾸는 개발자 <strong>전대환</strong> 입니다.
+        </h1>
 
         <h2 class="home__description">
           개발자의 실력을 비추는 거울이 아닌 사용자와 소통할 수 있는 유리창 같은
